--- a/vis-gen.css
+++ b/vis-gen.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 body {
-	background-color: #f7e9bf;
+	background: url("images/back.jpg") repeat scroll 0 0 transparent;
 }
 
 .revenue {
