Use icons instead of text links.
* Also some linting and cleanup of events and viewstate.
* Improved some docstrings.

--- a/vis-gen.css
+++ b/vis-gen.css
@@ -107,3 +107,12 @@ text.link {
 	text-decoration: underline; /* haha, doesn't work in firefox; 7 year old bug. https://bugzilla.mozilla.org/show_bug.cgi?id=317196 */
 	fill: blue;
 }
+
+img.btnimg {
+    height: 32px;
+    width: 32px;
+}
+
+.hidden {
+    display: none;
+}
