unbreak link to home

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="/index.html" class="button"><span>Home</span></a>
+          <a href="index.html" class="button"><span>Home</span></a>
           <a href="http://vis.dja.id.au" id="view-on-web" class="button"><span>Live site</span></a>
         </section>
 
