--- a/web.css
+++ b/web.css
@@ -13,7 +13,7 @@ div a {
     color: #77F;
 }
 
-text {
+* {
 	/* Stop selection (e.g. on double click) */
 	-moz-user-select: -moz-none;
 	-khtml-user-select: none;
