--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Visual Budget: {{ page.title }}</title>
+    <title>The Open Economy: {{ page.title }}</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Visual Budget</h1>
+          <h1>The Open Economy</h1>
           <h2>{{ page.title }}</h2>
         </header>
 
