Temporarily drop support for IE9; it doesn't have the File API that the ephemeral upload form requires. (#19). Various markup fixes for IE & Opera

--- a/web.css
+++ b/web.css
@@ -61,6 +61,7 @@ body {
 #toggleInfoBoxContainer {
     margin-top: 0;
     margin-bottom: 0;
+    clear: both;
 }
 
 #infobox {
@@ -120,11 +121,13 @@ div a {
 img.btnimg {
     height: 32px;
     width: 32px;
+    border: none;
 }
 
 img.smlbtnimg {
     height: 24px;
     width: 24px;
+    border: none;
 }
 
 .hidden {
