--- a/vis.css
+++ b/vis.css
@@ -9,7 +9,12 @@ circle.axis_circle {
 }
 
 .wedge.invalidPeriod {
-    fill: #444;
+    fill: #222;
+    fill-opacity: 0.6;
+}
+
+.invalidPeriod {
+    opacity: 0.5;
 }
 
 .wedge.cannotPopOut {
