Include github button, fix link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="http://vis.dja.id.au" id="view-on-web" class="button"><span>Live site</span></a>
-          <!--<a href="https://github.com/daxtens/finvis" id="view-on-github" class="button"><span>View on GitHub</span></a>-->
+          <a href="http://openeconomy.org.au" id="view-on-web" class="button"><span>Live site</span></a>
+          <a href="https://github.com/daxtens/finvis" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
