--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
 
         <section id="downloads" class="clearfix">
           <a href="index.html" class="button"><span>Home</span></a>
-          <a href="http://vis.dja.id.au" id="view-on-web" class="button"><span>Live site</span></a>
+          <a href="http://openeconomy.org.au" id="view-on-web" class="button"><span>Live site</span></a>
         </section>
 
         <hr>
