Hopefully fix IE10 SVG elements displayed beyond bounding box - http://blogs.msdn.com/b/ie/archive/2011/10/27/best-practices-for-getting-started-with-svg.aspx?Redirected=true

--- a/web.css
+++ b/web.css
@@ -10,6 +10,7 @@
    position: absolute;
    top: 0px;
    left: 0px;
+   overflow: hidden; /* Needed for IE10 embedding */
 }
 
 #openeconomy #oldBrowserWarning {
